--- a/report/main.tex
+++ b/report/main.tex
@@ -316,8 +316,9 @@ For now, it has been removed to protect the anonymity of the researchers.
 \section*{Appendix A}
 
 \begin{figure}[h]
-\csvautotabular{test.csv}
-\caption{Time taken to calculate the camera's view matrix for each algorithm during each test run.}
+\csvautotabular{performance.csv}
+\caption{Time taken to calculate the camera's view matrix for each algorithm during each test run.
+The times were produced by taking the total amount of time each algorithm spent on calculations, and dividing it by the total amount of times the mouse was moved.}
 \label{fig:performance-table}
 \end{figure}
 
